[package]
name = "counting_sort_user"
version = "0.1.0"
authors = ["Philipp Werner <p.a.werner@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counting_sort = {path = "../counting_sort"}

[dev-dependencies]
criterion = "0.3.1"
oorandom = "11.1.0"
count_sort = "0.3.0"

[[bench]]
name = "comparison_to_sort"
harness = false
