[package]
name = "counting_sort_benches"
version = "1.0.0"
authors = ["octopus <octopus@posteo.de>"]
edition = "2018"
documentation = "Benchmakrs for counting sort implementtion"

[dependencies]
counting_sort = "1.0.3"

[dev-dependencies]
criterion = "0.3.1"
oorandom = "11.1.0"
count_sort = "0.3.0"

[[bench]]
name = "comparison_to_sort"
harness = false
